// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectReducer 1 1`] = `
Object {
  "key": "increment",
  "payload": undefined,
  "reducer": [Function],
  "scope": "",
}
`;

exports[`connectReducer 1 2`] = `
Object {
  "key": "increment",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu",
}
`;

exports[`connectReducer 1 3`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu",
}
`;

exports[`connectReducer 1 4`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu.child",
}
`;

exports[`connectReducer 1 5`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu.child",
}
`;
